INF-3673 remove -Xverify:none option