@@ -8,7 +8,6 @@
     <property name="lib" value="${basedir}/lib/Java"/>
     <property name="web.lib" value="${web-inf.dir}/lib"/>
     <property name="validateData" value="${basedir}/server_apps/DB_maintenance"/>
-    <property name="jvm.args" value="-Xverify:none"/>
 
     <property environment="env"/>
 
@@ -73,7 +72,6 @@
             <arg value="PAINT"/>
             <arg value="http://www.geneontology.org/gene-associations/submission/paint/pre-submission/gene_association.paint_zfin.gz"/>
             <arg value="org.zfin.datatransfer.go.PaintGafParser"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -90,7 +88,6 @@
             <arg value="org.zfin.datatransfer.go.GoaGafParser"/>
             <arg value="ftp://ftp.ebi.ac.uk/pub/databases/GO/goa/ZEBRAFISH/goa_zebrafish_isoform.gaf.gz"/>
             <arg value="ftp://ftp.ebi.ac.uk/pub/databases/GO/goa/ZEBRAFISH/goa_zebrafish_rna.gaf.gz"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -105,7 +102,6 @@
             <arg value="Noctua"/>
             <arg value="https://build.berkeleybop.org/job/export-lego-to-gpad-sparql/lastSuccessfulBuild/artifact/legacy/zfin.gpad"/>
             <arg value="org.zfin.datatransfer.go.GpadParser"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -120,7 +116,6 @@
             <arg value="FP Inferences"/>
             <arg value="http://build.berkeleybop.org/view/GAF/job/gaf-check-zfin/lastSuccessfulBuild/artifact/gene_association.zfin.inf.gaf"/>
             <arg value="org.zfin.datatransfer.go.FpInferenceGafParser"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -132,7 +127,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/report_data"/>
             <arg value="Synchronize-Antibodies-Zfin-Wiki_w"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -144,7 +138,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/report_data"/>
             <arg value="Check-Eap-Pato-Terms_d"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -156,7 +149,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/validatedata"/>
             <arg value="Set-Permissions-Zebrafish-Book-Wiki_d"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
         <echo message="Check file: ${validateData}/validatedata/${JobName}/${JobName}.faulty-pages.txt"/>
     </target>
@@ -169,7 +161,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/validatedata"/>
             <arg value="Clean-Wiki-Sandbox_w"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -180,7 +171,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/report_data"/>
             <arg value="${jobName}"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -192,7 +182,6 @@
             <arg value="${validateData}/report_data"/>
             <arg value="${jobName}"/>
             <arg value="10"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -203,7 +192,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/report_data"/>
             <arg value="${jobName}"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -214,7 +202,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/report_data"/>
             <arg value="${jobName}"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -225,7 +212,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/report_data"/>
             <arg value="${jobName}"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -236,7 +222,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="${validateData}/report_data"/>
             <arg value="${jobName}"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
 
         <fail message="Error in microarray update">
@@ -256,7 +241,6 @@
             <arg value="${JobName}"/>
             <arg value="${validateData}/validatedata"/>
             <arg value="${web-inf.dir}/zfin.properties"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -283,7 +267,6 @@
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="-taskClassName"/>
             <arg value="org.zfin.infrastructure.ant.DataReportTask"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -298,7 +281,6 @@
             <arg value="${validateData}/validatedata"/>
             <arg value="${web-inf.dir}/zfin.properties"/>
             <arg value="true"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -315,7 +297,6 @@
             <arg value="${validateData}/validatedata"/>
             <arg value="-propertyFilePath"/>
             <arg value="${web-inf.dir}/zfin.properties"/>
-            <jvmarg value="${jvm.args}"/>
         </java>
     </target>
 
@@ -335,7 +316,6 @@
             <arg value="-threads"/>
             <arg value="40"/>
             <arg value=""/>
-            <jvmarg value="${jvm.args}"/>
         </java>
 
         <echo message="${validateData}/validatedata/${JobName}.txt"/>
@@ -359,7 +339,6 @@
                 <arg value="@{instanceName}"/>
                 <arg value="@{db-query-file}"/>
                 <arg value="${unloadDir}"/>
-		        <jvmarg value="${jvm.args}"/>
             </java>
         </sequential>
     </macrodef>
@@ -388,7 +367,6 @@
                 <arg value="${validateData}/report_data"/>
                 <arg value="-propertyDir"/>
                 <arg value="${web-inf.dir}/zfin.properties"/>
-                <jvmarg value="${jvm.args}"/>
             </java>
         </sequential>
     </macrodef>
